--- a/public/main.html
+++ b/public/main.html
@@ -3,6 +3,8 @@
 <head>
     <title>CS4241 Assignment 3 Data Page</title>
     <meta charset="utf-8">
+    <meta name = "viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="App page for CS 4241 A3">
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">\
     <link rel="stylesheet" href ="css/styles.css">
@@ -10,34 +12,48 @@
 
 <body>
     <h1>
-        Data
+        All Available Data
     </h1>
+
 
     <table id = "tableInsert" class = "pure-table">
     </table>
 
+    <br>
+    <br>
+    
+    <div id = "allForms">
+    <div id = "addForm">
     <h2>Add Info To Your Account</h2>
-    <form id = "add">
+    <form id = "add" class = "pure-form">
         <label for="field">Field</label> <br>
-        <input type = "text" name = "field"> <br><br>
-        <label for="value">Value</label> <br>
-        <input type = "text" name = "toAdd"> <br><br>
-        <input type = "submit" value = "submit"> <br>
+        <input type = "text" name = "field" id = "field"> <br><br>
+        <label for="toAdd">Value</label> <br>
+        <input type = "text" name = "toAdd" id = "toAdd"> <br><br>
+        <input type = "submit" value = "submit" class = "pure-button pure-button-active"> <br>
     </form>
-    <br>
+    </div>
+  
+
+    <div id = "updateForm">
     <h2>Update Info To Your Account</h2>
-    <form id = "update">
-        <label for="field">Field</label> <br>
-        <input type = "text" name = "field"> <br><br>
-        <label for="value">Value</label> <br>
-        <input type = "text" name = "toUpdate"> <br><br>
-        <input type = "submit" value = "submit"> <br>
+    <form id = "update" class = "pure-form">  
+            <label for="field">Field</label> <br>
+            <input type = "text" name = "field" id = "field"> <br><br>
+            <label for="toUpdate">Value</label> <br>
+            <input type = "text" name = "toUpdate" id = "toUpdate"> <br><br>
+            <input type = "submit" value = "submit" class = "pure-button pure-button-active"> <br>
     </form>
-    <br>
+</div>
+   
+
+    <div id = "removeForm">
     <h2>Remove Info From Your Account</h2>
-    <form id = "remove">
+    <form id = "remove" class = "pure-form">
         <label for="field">Field</label> <br>
-        <input type = "text" name = "field"> <br><br>
-        <input type = "submit" value = "submit"> <br>
+        <input type = "text" name = "field" id = "field"> <br><br>
+        <input type = "submit" value = "submit" class = "pure-button pure-button-active"> <br>
     </form>
+</div>
+</div>
 </body>
